rework datebook page

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -16,7 +16,7 @@ $gray-700: #495057 !default;
 $gray-800: #313a46 !default;
 $gray-900: #212529 !default;
 $black:    #000 !default;
-$dark:     #181C32 !default;
+$dark:     #4c4c4d !default;
 
 $blue:    #3699FF !default;
 $indigo:  #6610f2 !default;
