--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -30,7 +30,7 @@
 
             <li class="side-nav-item">
                 <a class="side-nav-link" [routerLink]="['/dashboard']">
-                    <i class="uil-home-alt"></i>
+                    <i class="uil-home-alt"></i> s
                     <span> Dashboards </span>
                 </a>
                 <a class="side-nav-link" [routerLink]="['/profile']">
