--- a/src/styles.scss
+++ b/src/styles.scss
@@ -82,13 +82,46 @@ body {
     -webkit-align-items: flex-start;
     -ms-flex-align: start;
     align-items: flex-start;
+}
 
+.input-line {
+    overflow: visible !important;
+    border: 0 !important;
+    border-color: #dee2e6!important;
+    border-bottom: 1px solid !important;
+    background: none !important;
+    border-radius: 0% !important;
 }
 
 .border-card {
-
     padding: 1rem;
     border: 1px solid $gray-200;
     border-radius: 0.25rem;
+}
 
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) {
+    .hidden-column {
+        display: none;
+    }
+    .margin-dinamic {
+        margin: 0.0rem !important;
+    }
+}
+
+@media only screen and (min-device-width: 568px) and (max-device-width: 1024px) {
+    .hidden-column {
+        display: none;
+    }
+    .margin-dinamic {
+        margin: 0.5rem !important;
+    }
+}
+
+@media only screen and (min-device-width: 1024px) {
+    .hidden-column {
+        /* display: inline; */
+    }
+    .margin-dinamic {
+        margin: 0.5rem !important;
+    }
 }
